@@ -807,6 +807,10 @@ internal fun JvmApplicationContext.configureGraalvmApplication() {
             val resolvedPgoProfile = pgoProfileFile
             val resolvedAdvancedObfuscation = graalvm.advancedObfuscation.get()
             inputs.property("advancedObfuscation", resolvedAdvancedObfuscation)
+            val resolvedMaxHeapSize = graalvm.maxHeapSize.orNull
+            val resolvedMaxHeapSizePercent = graalvm.maxHeapSizePercent.get()
+            inputs.property("maxHeapSize", resolvedMaxHeapSize ?: "")
+            inputs.property("maxHeapSizePercent", resolvedMaxHeapSizePercent)
             val resolvedGraalvmHome = graalvmHome.get()
             // Rerun the compile when the PGO mode or the recorded profile changes — the args are
             // assembled in doFirst, so they are not tracked as inputs by themselves.
@@ -862,6 +866,24 @@ internal fun JvmApplicationContext.configureGraalvmApplication() {
                         // Embed all JDK charsets when the app needs legacy encodings.
                         if (resolvedAllCharsets) {
                             add("-H:+AddAllCharsets")
+                        }
+
+                        // Grant native access to code on the classpath. The Nucleus native
+                        // modules call System.loadLibrary from the unnamed module; since JDK 24
+                        // (JEP 472) that emits a "restricted method called" warning at startup and
+                        // will be blocked outright in a future release. native-image bakes the flag
+                        // in as a launcher default so the produced binary never prints the warning
+                        // and stays forward-compatible. Placed before user buildArgs (last wins).
+                        add("--enable-native-access=ALL-UNNAMED")
+
+                        // Default runtime max heap. Serial GC otherwise defaults to 80% of RAM;
+                        // bake a desktop-appropriate ceiling (JVM parity, ~25%) instead. Baked as a
+                        // default — still overridable at runtime with -Xmx. An absolute size wins
+                        // over the percentage. Placed before user buildArgs so an explicit override wins.
+                        if (resolvedMaxHeapSize != null) {
+                            add("-R:MaxHeapSize=$resolvedMaxHeapSize")
+                        } else {
+                            add("-R:MaximumHeapSizePercent=$resolvedMaxHeapSizePercent")
                         }
 
                         // Opt out of Oracle GraalVM's default ML-inferred PGO profile. Placed before
